feat(SBOMER-326): Add advisory identifier to release and build manifests